Added server, Axios, and ChartJS

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-budget",
   "version": "1.0.0",
-  "description": "The path to NGInx main folder: /usr/share/nginx/html",
+  "description": "The path to NGInx main folder:\r /usr/share/nginx/html",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,17 +9,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fabionolasco/personal-budget.git"
+    "url": "git+https://github.com/tmacdoug/personal-budget-week04.git"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Thomas MacDougall",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/fabionolasco/personal-budget/issues"
+    "url": "https://github.com/tmacdoug/personal-budget-week04/issues"
   },
-  "homepage": "https://github.com/fabionolasco/personal-budget#readme",
+  "homepage": "https://github.com/tmacdoug/personal-budget-week04#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^5.1.0"
   }
 }
